# obs-backgroundremoval

./: .clang-format  .editorconfig  .gersemirc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  LICENSE  NOTICE.md  README.md  REUSE.toml  SECURITY.md  buildspec.json  release-please-config.json  vcpkg-configuration.json  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/extract-buildspec/: action.yml
.github/actions/setup-ccache/: action.yml
.github/actions/setup-ccache/verify-js/: base64.mjs  index.mjs  minisign-verify-cli.mjs  minisign.mjs
.github/actions/setup-macos-codesigning/: action.yml
.github/scripts/: clean-env-macos.bash  clean-env-ubuntu.bash  clean-env-windows.ps1
.github/workflows/: check.yml  dependencies-vcpkg.lock.yml  ort-build-macos.yml  pages.yml  plugin-build-macos.yml  plugin-build-ubuntu.yml  plugin-build-windows.yml  plugin-release.yml  plugin.yml  pr-title.yml  print-secrets.yml  release-please.yml  security.yml  validate-pr.lock.yml
cmake/common/: bootstrap.cmake  compiler_common.cmake  helpers_common.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/macos/: compilerconfig.cmake  defaults.cmake  helpers.cmake  xcode.cmake
cmake/windows/: compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/windows/resources/: resource.rc.in.license
data/: manifest.json
data/effects/: bria_mask_alpha_filter.effect
data/locale/: en-US.ini  ta-IN.ini
pages/: REUSE.toml  package-lock.json  package.json
pages/public/: favicon-96x96.png.license
pages/scripts/: add-csp-hashes.mjs  add-sri.mjs  generate-provenance.mjs
pages/src/components/: DefineLocalDate.astro  LocalDate.ts
pages/src/layouts/: Layout.astro  MarkdownLayout.astro
pages/src/lib/: info.ts
pages/src/pages/: index.astro
pages/src/styles/: global.css
scripts/: build_libobs_macos.sh  build_libobs_windows.ps1  download_deps.cmake  lipo_vcpkg_macos.sh
src/: FilterData.hpp  bria-analytics.cpp  bria-analytics.hpp  bria-error-dialog.cpp  bria-error-dialog.h  bria-filter-info.c  bria-filter.cpp  bria-filter.h  bria-source-info.c  bria-source.cpp  bria-source.h  bria-welcome-dialog.cpp  bria-welcome-dialog.h  consts.h  msvc-stl-compat.cpp  plugin-main.c  plugin-support.c.in  plugin-support.h
src/bria-utils/: bria-auth-client.cpp  bria-auth-client.hpp  bria-frame-protocol.cpp  bria-frame-protocol.hpp  bria-rmbg-client.cpp  bria-rmbg-client.hpp  bria-sentry.cpp  bria-sentry.hpp
src/obs-utils/: obs-config-utils.cpp  obs-config-utils.hpp  obs-utils.cpp  obs-utils.hpp
src/update-checker/: Client.hpp  github-utils.cpp  github-utils.hpp  update-checker.cpp  update-checker.h
src/update-checker/CurlClient/: CMakeLists.txt  CurlClient.cpp
vcpkg-triplets/: REUSE.toml  arm64-osx-obs-asan.cmake  arm64-osx-obs.cmake  x64-linux-obs-asan.cmake  x64-linux-obs.cmake  x64-osx-obs-asan.cmake  x64-osx-obs.cmake  x64-windows-static-md-obs-asan.cmake  x64-windows-static-md-obs.cmake
